# gitoy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LATEST_COMMIT.md  README.md  SPEC.md  TODO.md  pyproject.toml  test_commit.py
.claude/commands/: check_cohesion.md  review-changes.md  review-pre-changes.md  review-pre-commit.md
.cursor/rules/: step-by-step.mdc
design-document/: checkout.md  git-commit-tree-design.excalidraw  git-merge-design.excalidraw  git-sqlite-design-2.excalidraw  git-sqlite-design.excalidraw
scripts/: run-ruff.sh  run-ty.sh
src/: __init__.py  cli.py  custom_types.py  hash_algo.py  repository.py  repository_path.py  worktree.py
src/command/: __init__.py  add.py  branch.py  checkout.py  commit.py  init.py  log.py  merge.py  status.py
src/database/: database.py  sqlite.py
src/repository/: __init__.py  blob.py  blob_store.py  commit_store.py  compress_file.py  convert.py  entry_diff.py  hash_file.py  index.py  index_diff.py  index_store.py  path.py  path_validator.py  repo_path.py  repository.py  tree.py  tree_diff.py  tree_store.py  worktree.py
src/util/: array.py  console.py  constant.py  file.py  file_handler.py  hash_algo.py  path.py  repository_file.py  result.py
test/: __init__.py  conftest.py  factory.py  pytest.ini  run_tests.py  test_repository.py  test_worktree.py  util.py
test/command/: conftest.py  test_status.py
test/database/: conftest.py  test_database.py
test/repository/: test_commit_store.py  test_index_diff.py  test_index_store.py  test_repo_path.py  test_repository.py  test_tree.py  test_tree_diff.py  (+2 more)
(+13 files in other folders)
